[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pypesq"
version = "1.2.4"
description = "A package to compute pesq score."
readme = "README.md"
requires-python = ">=3.3,<4.0"
license = {file = "LICENSE"}
authors = [
    {name = "zhuroubaicai", email = "zhuroubaicai@gmail.com"},
]
keywords = ["pesq", "speech", "speech quality"]

dependencies = [
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/vBaiCai/python-pesq"
"Issues" = "https://github.com/vBaiCai/python-pesq/issues"
